# FFmpegModule

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  opendaq_ref
.github/workflows/: ci-downstream.yml  ci.yml
examples/: CMakeLists.txt
examples/video_preview/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/video_device_module/: CMakeLists.txt
modules/video_device_module/include/video_device_module/: camera_channel_impl.h  camera_device_impl.h  camera_driver.h  camera_platform.h  common.h  fallback_timer.h  ffmpeg_av_packet_utils.h  module_dll.h  time_accumulator.h  video_device_module_impl.h  video_display_fb_impl.h  video_frame_encoder_fb_impl.h
modules/video_device_module/src/: CMakeLists.txt  camera_channel_impl.cpp  camera_device_impl.cpp  camera_driver.cpp  camera_platform.cpp  camera_platform_macos.mm  fallback_timer.cpp  module_dll.cpp  time_accumulator.cpp  video_device_module_impl.cpp  video_display_fb_impl.cpp  video_frame_encoder_fb_impl.cpp
modules/video_device_module/tests/: CMakeLists.txt  common.h  mock_camera_device.cpp  mock_camera_device.h  mock_camera_device_test.cpp  test_app.cpp  video_device_module_test.cpp  video_display_fb_impl_test.cpp  video_frame_encoder_fb_impl_test.cpp
